# libbytesize

./: .gitignore  .packit.yaml  .travis.yml  HACKING.md  Makefile.am  NEWS.rst  README.md  README.rst  acinclude.m4  annotation-glossary.html  api-index-full.html  autogen.sh  ch01.html  ch02.html  configure.ac  deprecated-api-index.html  index.html  index.sgml  libbytesize-BSSize.html  libbytesize.devhelp2  zanata.xml
.github/: dependabot.yml
.github/workflows/: csmock.yml  rpmbuild.yml  test-musl.yml
.travis/: Dockerfile.debian-testing  Dockerfile.fedora-rawhide
docs/: Makefile.am  libbytesize-docs.xml.in  libbytesize-sections.txt
misc/: alpine.Dockerfile  install-test-dependencies.yml  libbytesize-tasks.yml
plans/: tests.fmf
po/: Makefile.am  Makevars  POTFILES.in  af.po  am.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ilo.po  is.po  it.po  ja.po  ka.po  (+39 more)
src/: Makefile.am  bs_size.c  bs_size.h  bytesize.pc.in  gettext.h
src/python/: Makefile.am  __init__.py  bytesize.py
src/python/gi/overrides/: ByteSize.py  Makefile.am
tests/: Makefile.am  canary_tests.sh  canary_tests.sh.in  lbs_py_override_unittest.py  libbytesize_unittest.py  libbytesize_unittest.sh  libbytesize_unittest.sh.in  locale_utils.py  testenv.sh
tests/project-tests/: test_projects.sh
tools/: Makefile.am  bs_calc.py  bs_calc.py.in  bscalc.man
translation-canary/translation_canary/translated/: test_markup.py  test_usability.py
