AM_TESTS_ENVIRONMENT = top_srcdir="$(top_srcdir)" top_builddir="$(top_builddir)" ; . $(srcdir)/testenv.sh ;
TEST_EXTENSIONS = .py

dist_noinst_SCRIPTS = libbytesize_unittest.py lbs_py_override_unittest.py testenv.sh

TESTS = libbytesize_unittest.py lbs_py_override_unittest.py

MAINTAINERCLEANFILES = Makefile.in
